@@ -25,6 +25,7 @@
     <File name="DisableDebuggingCodeTest.cs" subtype="Code" buildaction="Compile" />
     <File name="ReplaceIncompleteOddnessCheckTest.cs" subtype="Code" buildaction="Compile" />
     <File name="ObsoleteMessagesShouldNotBeEmptyTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="AvoidVisibleConstantFieldTest.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="framework" />
