@@ -1,3 +1,9 @@
+2008-06-30  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* AvoidVisibleConstantFieldRule.cs: New. Unit tests for 
+	AvoidVisibleConstantFieldRule
+	* Test.Rules.BadPractice.mdp: Update MD project file.
+
 2008-06-28  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* ReplaceIncompleteOddnessCheckTest.cs: New. Unit tests for 
